fixed spinner height overflow

--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -1,6 +1,6 @@
 .spinner-main-div{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
